Compiler/tests/typing/bad/testfile-redef-4.rs

struct S { a: i32, a: bool }
fn main() { }
